tests/pass/fieldArg.tiger
let
	type data = {elt : int, to_add : int}
	type dataArray = array of data
	var l := dataArray [4] of nil
in
	for i := 0 to 3 do
		if l [i].to_add then
			print ("fonctionne")
end
